<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.ibm.wala</groupId>
  <artifactId>ml</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>com.ibm.wala.cast.python</module>
    <module>com.ibm.wala.cast.python.jython</module>
    <module>com.ibm.wala.cast.python.jython3</module>
    <module>com.ibm.wala.cast.python.test</module>
    <module>com.ibm.wala.cast.python.jython.test</module>
    <module>com.ibm.wala.cast.python.jython3.test</module>
    <module>com.ibm.wala.cast.python.ml</module>
    <module>com.ibm.wala.cast.python.ml.test</module>
    <module>com.ibm.wala.cast.python.report</module>
  </modules>
  <distributionManagement>
    <repository>
      <id>internal.repo</id>
      <name>Temporary Staging Repository</name>
      <url>file://${project.build.directory}/mvn-repo</url>
    </repository>
  </distributionManagement>
  <properties>
    <project-version>0.0.1-SNAPSHOT</project-version>
    <maven.compiler.release>21</maven.compiler.release>
    <maven.compiler.version>3.14.0</maven.compiler.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <build-alias>b000</build-alias>
    <wala.version>1.6.10</wala.version>
    <spotless.version>2.44.5</spotless.version>
    <maven.surefire.version>3.5.3</maven.surefire.version>
    <parallel>both</parallel>
    <logging.config.file>./logging.properties</logging.config.file>
    <jacoco-version>0.8.13</jacoco-version>
    <argLine/>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.ibm.wala</groupId>
        <artifactId>com.ibm.wala.util</artifactId>
        <version>${wala.version}</version>
      </dependency>
      <dependency>
        <groupId>com.ibm.wala</groupId>
        <artifactId>com.ibm.wala.shrike</artifactId>
        <version>${wala.version}</version>
      </dependency>
      <dependency>
        <groupId>com.ibm.wala</groupId>
        <artifactId>com.ibm.wala.core</artifactId>
        <version>${wala.version}</version>
      </dependency>
      <dependency>
        <groupId>com.ibm.wala</groupId>
        <artifactId>com.ibm.wala.cast</artifactId>
        <version>${wala.version}</version>
      </dependency>
      <dependency>
        <groupId>com.ibm.wala</groupId>
        <artifactId>com.ibm.wala.cast.java</artifactId>
        <version>${wala.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.lsp4j</groupId>
        <artifactId>org.eclipse.lsp4j</artifactId>
        <version>0.8.1</version>
      </dependency>
      <dependency>
        <groupId>commons-cli</groupId>
        <artifactId>commons-cli</artifactId>
        <version>1.9.0</version>
      </dependency>
      <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>20250517</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.2</version>
      </dependency>
      <dependency>
        <groupId>org.python</groupId>
        <artifactId>jython3</artifactId>
        <version>0.0.1-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.python</groupId>
        <artifactId>jython-slim</artifactId>
        <version>[2.7.3a1-SNAPSHOT,)</version>
      </dependency>
      <dependency>
        <groupId>org.antlr</groupId>
        <artifactId>antlr-runtime</artifactId>
        <version>3.5.3</version>
      </dependency>
      <dependency>
        <groupId>org.ow2.asm</groupId>
        <artifactId>asm-all</artifactId>
        <version>6.0_BETA</version>
      </dependency>
      <dependency>
        <groupId>com.github.jnr</groupId>
        <artifactId>jnr-constants</artifactId>
        <version>0.10.4</version>
      </dependency>
      <dependency>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.18.0</version>
      </dependency>
      <dependency>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.version}</version>
          <configuration>
            <compilerArgs>
              <arg>-Xlint:deprecation</arg>
              <arg>-Xlint:unchecked</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.version}</version>
          <configuration>
            <threadCount>1</threadCount>
            <systemPropertyVariables>
              <!-- Set JUL Formatting -->
              <java.util.logging.config.file>${logging.config.file}</java.util.logging.config.file>
            </systemPropertyVariables>
            <forkMode>once</forkMode>
            <argLine>@{argLine} -Dpython.import.site=false</argLine>
            <trimStackTrace>false</trimStackTrace>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless.version}</version>
          <configuration>
            <formats>
              <format>
                <includes>
                  <include>**/*</include>
                </includes>
                <excludes>
                  <exclude>**/target/</exclude>
                  <exclude>**/__pycache__/</exclude>
                  <exclude>**/*.swp</exclude>
                  <exclude>**/*.swp</exclude>
                  <exclude>**/*.swo</exclude>
                  <exclude>**/*.swn</exclude>
                  <exclude>**/.idea/</exclude>
                  <exclude>**/.vscode/</exclude>
                  <exclude>**/node_modules/</exclude>
                  <exclude>**/cachedir/</exclude>
                  <exclude>**/*~</exclude>
                  <exclude>**/*.min.*</exclude>
                  <exclude>**/tmp.*</exclude>
                  <exclude>**/*.jar</exclude>
                  <exclude>**/*.exe</exclude>
                  <exclude>**/*.dll</exclude>
                  <exclude>**/*.class</exclude>
                  <exclude>**/*.png</exclude>
                  <exclude>**/*.jpg</exclude>
                  <exclude>**/*.gif</exclude>
                  <exclude>**/*.xml</exclude>
                  <exclude>**/.pydevproject</exclude>
                  <exclude>**/*pom.xml</exclude>
                  <exclude>**/*.md</exclude>
                  <exclude>**/.gitignore</exclude>
                  <exclude>**/*.java</exclude>
                  <exclude>**/*.gradle/</exclude>
                  <exclude>**/.pytest_cache/</exclude>
                  <exclude>**/*.log</exclude>
                  <exclude>**/*.pdf</exclude>
                </excludes>
                <trimTrailingWhitespace/>
                <endWithNewline/>
              </format>
              <format>
                <includes>
                  <include>**/*.md</include>
                  <include>**/.gitignore</include>
                </includes>
                <excludes>
                  <exclude>**/target/</exclude>
                </excludes>
                <trimTrailingWhitespace/>
                <endWithNewline/>
                <indent>
                  <tabs>true</tabs>
                  <spacesPerTab>4</spacesPerTab>
                </indent>
              </format>
              <format>
                <includes>
                  <include>**/*.xml</include>
                  <include>**/.pydevproject</include>
                </includes>
                <excludes>
                  <exclude>**/plugin.xml</exclude>
                  <exclude>**/pom.xml</exclude>
                  <exclude>**/dependency-reduced-pom.xml</exclude>
                  <exclude>**/gradle.xml</exclude>
                  <exclude>**/target/</exclude>
                </excludes>
                <eclipseWtp>
                  <type>XML</type>
                  <files>
                    <file>./spotless.xml.prefs</file>
                  </files>
                </eclipseWtp>
                <trimTrailingWhitespace/>
                <endWithNewline/>
              </format>
            </formats>
            <java>
              <googleJavaFormat>
                <version>1.27.0</version>
                <reflowLongStrings>true</reflowLongStrings>
              </googleJavaFormat>
              <trimTrailingWhitespace/>
              <endWithNewline/>
            </java>
            <pom>
              <sortPom>
                <expandEmptyElements>false</expandEmptyElements>
              </sortPom>
            </pom>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${maven.surefire.version}</version>
      </plugin>
    </plugins>
  </reporting>
  <profiles>
    <profile>
      <id>jacoco</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco-version}</version>
            <configuration>
              <propertyName>argLine</propertyName>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
                <phase>initialize</phase>
              </execution>
              <execution>
                <id>report</id>
                <goals>
                  <goal>report</goal>
                </goals>
                <phase>verify</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
